# trex

./: .gitignore  .internal-reference  README.md
.github/tools/: github_actions_run_cargo  nextest.toml
.github/workflows/: ci.yml
trex/: Cargo.toml
trex/src/: aggregate_types.rs  c_type_printer.rs  c_types.rs  constant_folding.rs  containers.rs  dataflow.rs  dynamic_variable.rs  ghidra_lifter.rs  ghidra_variable_lifter.rs  global_value_numbering.rs  il.rs  inference_config.rs  joinable_container.rs  lib.rs  main.rs  reaching_definitions.rs  serialize_structural.rs  ssa.rs  starts_at_analysis.rs  structural.rs  tests.rs  type_rounding.rs
trex/tests/: test-linked-list-slot1.binar  test-linked-list-slot1.lifted  test-linked-list-slot1.ndbg-bin  test-linked-list-slot1.vars  test-linked-list-slot2.binar  test-linked-list-slot2.lifted  test-linked-list-slot2.ndbg-bin  test-linked-list-slot2.vars
utils/: Justfile  README.md
utils/ghidra_headless_scripts/src/: PCodeExporter.java  VariableExporter.java
